* break lines to avoid overflowing space available for subtitles * allow max 2 lines of subs * align subs to base of video player

--- a/html5-subtitling/subtitling.css
+++ b/html5-subtitling/subtitling.css
@@ -53,10 +53,19 @@ video
   text-align: center;
   font-family: sans-serif;
   line-height: 2em;
-  top: -4.8em;
   color: rgba(255,255,128, 1);
   text-shadow: rgba(0,0,0, 0.6) 1px 1px;
   background: rgba(0,0,0, 0.6);
+}
+
+.subtitleslines1
+{
+  top: -4.8em;
+}
+
+.subtitleslines2
+{
+  top: -6.8em;
 }
 
 input[type=number]
